# CMD-Manager

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
cmd-manager/: .gitignore  Cargo.toml  readme.md
cmd-manager/.github/workflows/: rust-ci.yaml
cmd-manager/src/: main.rs
cmd-manager/src/file/: compare.rs  mod.rs  search.rs
cmd-manager/src/menu/: mod.rs
cmd-manager/src/todo/: mod.rs
cmd-manager/src/utils/: mod.rs
cmd-manager/src/web/: download.rs  mod.rs  web_req.rs
src/: main.rs
src/brain/: mod.rs  queries.rs  talk.rs
src/file/: compare.rs  mod.rs  search.rs
src/queries/: brain.rs  file.rs  mod.rs  security.rs  todo.rs
src/security/: mod.rs  secure_db.rs
src/todo/: mod.rs  new_task.rs  remove_task.rs  search_task.rs  show_task.rs  view_task.rs
src/utils/: mod.rs
src/views/: mod.rs
src/web/: download.rs  mod.rs  web_req.rs
