[package]
name = "cmd-manager"
categories = ["command-line-utilities"]
repository = "https://github.com/DavidoAprendiz/CMD-Manager"
version = "0.3.0"
readme = "README.md"
edition = "2021"

[dependencies]
chrono = "0.4.38"
similar = "2.5.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
sqlite = "0.36.0"